añadimos animaciones con js

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </nav>
     <section id="home">
       <div>
-        <h2>Bienvenido a JetSmart Argentina Virtual</h2>
+        <h1 onmouseover="agrandarLetra(this)" onmouseout="reducirLetra(this)" >BIENVENIDO A  <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px" > ARGENTINA VIRTUAL</h1>
         <h3>Conoce todos nuestros destinos y opera de la forma más realista</h3>
-        <img src="./images/7355973_preview_rev_1.png"alt="avionjes">
+        <img id="avion" src="./images/7355973_preview_rev_1.png"alt="avionjes">
         <h2>Acerca de JetSmart Argentina Virtual</h2>
         <h3>
           Conoce quienes somos, cómo comenzamos y cómo es nuestra forma de
@@ -207,6 +207,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- Aquí se incluirían los scripts de JavaScript si fueran necesarios -->
+    <script src="animacion-letras.js"></script>
+    <script src="mover-avion.js"></script>
   </body>
 </html>
