actualización de código js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 onmouseover="agrandarLetra(this)" onmouseout="reducirLetra(this)" >BIENVENIDO A  <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px" > ARGENTINA VIRTUAL</h1>
         <h3>Conoce todos nuestros destinos y opera de la forma más realista</h3>
         <img id="avion" src="./images/7355973_preview_rev_1.png"alt="avionjes">
-        <h2>Acerca de JetSmart Argentina Virtual</h2>
+        <h2>ACERCA DE <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px" > ARGENTINA VIRTUAL</h2>
         <h3>
           Conoce quienes somos, cómo comenzamos y cómo es nuestra forma de
           operar en el mundo de la aviación online.
