--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <section id="home">
       <div>
-        <h1 onmouseover="agrandarLetra(this)" onmouseout="reducirLetra(this)" >BIENVENIDO A  <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px" > ARGENTINA VIRTUAL</h1>
+        <h1>BIENVENIDO A  <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px" > ARGENTINA VIRTUAL</h1>
         <h3>Conoce todos nuestros destinos y opera de la forma más realista</h3>
         <img id="avion" src="./images/7355973_preview_rev_1.png"alt="avionjes">
         <h2>ACERCA DE <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px" > ARGENTINA VIRTUAL</h2>
@@ -206,7 +206,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="animacion-letras.js"></script>
     <script src="mover-avion.js"></script>
   </body>
 </html>
