--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div id="container">
     <nav>
+      <a href="index.html">
       <img
         src="https://ss-static-001.esmsv.com/r/content/host1/f2d9c38defce229111257c5ac2235ce9//img/DzVk6gK9qnybp1k0YfmaqulTQMra6uvAuqBSMA9v.png"
         width="180px" alt="logojes">
@@ -30,6 +31,7 @@
         <li><a href="./pages/acceso.html">Acceso Tripulación</a></li>
         <li><a href="./pages/registro.html">Registrarse</a></li>
       </ul>
+    </a>
     </nav>
     <section id="home">
       <div>
