empezamos sección quienes somos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           VIRTUAL</h1>
         <h3>Conoce todos nuestros destinos y opera de la forma más realista</h3>
         <img id="avion" src="./images/7355973_preview_rev_1.png" alt="avionjes">
-        <h2>ACERCA DE <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> ARGENTINA
+        <h2>ACERCA DE <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px" alt="logojes"> ARGENTINA
           VIRTUAL</h2>
         <h3>
           Conoce quienes somos, cómo comenzamos y cómo es nuestra forma de
