--- a/pages/historia.html
+++ b/pages/historia.html
@@ -32,31 +32,66 @@
                 <li><a href="./pages/registro.html">Registrarse</a></li>
             </ul>
         </nav>
-        <section id="quienes-somos">
-            <div>
-                <h2>Quiénes Somos</h2>
-                <p>Jetsmart Argentina Virtual es una aerolínea virtual comprometida con brindar una experiencia de vuelo única y segura. Conoce más sobre nuestra historia, nuestra flota, nuestro equipo y nuestro compromiso con la calidad y el medio ambiente.</p>
-            </div>
-        </section>
         <section id="historia">
-            <h2>Historia de Jetsmart Argentina Virtual</h2>
-            <p>Aquí puedes incluir una breve historia de la aerolínea, desde su fundación hasta el presente. Destaca los aspectos más importantes que han definido a Jetsmart Argentina Virtual.</p>
-        </section>
-        <section id="equipo">
-            <h2>Equipo Directivo</h2>
-            <p>Conoce al equipo directivo de Jetsmart Argentina Virtual, compuesto por expertos en la industria de la aviación. Descubre quiénes están detrás de las operaciones de la aerolínea.</p>
-        </section>
-        <section id="flota">
-            <h2>Flota de Aviones</h2>
-            <p>Descubre la flota de aviones de Jetsmart Argentina Virtual. Desde aviones comerciales hasta jets privados, conoce nuestros modelos y las rutas en las que operamos.</p>
-        </section>
-        <section id="seguridad">
-            <h2>Compromiso con la Seguridad y la Calidad</h2>
-            <p>En Jetsmart Argentina Virtual, la seguridad y la calidad son nuestra máxima prioridad. Conoce nuestros estándares y procedimientos para garantizar una experiencia de vuelo segura y satisfactoria para nuestros pasajeros.</p>
-        </section>
-        <section id="medioambiente">
-            <h2>Compromiso con el Medio Ambiente</h2>
-            <p>En Jetsmart Argentina Virtual, nos preocupamos por el medio ambiente. Conoce nuestras iniciativas para reducir nuestro impacto ambiental y promover la sostenibilidad en la industria de la aviación.</p>
+            <div id="carouselhistoria" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/0b59cac1-f53c-4389-b32e-fac73e474b73/desktop-3.png"  alt="lv-ivo" />
+                        <div class="carousel-caption">
+                            <h3><img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual es una aerolínea comprometida con brindar una experiencia de vuelo
+                                única y realista. Nuestro objetivo es realizar las operaciones de la aerolínea real cumpliendo con su política operativa.</h3>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="" width="1920px" height="500px" alt="ZorroCulpeo" />
+                        <div class="carousel-caption">
+                            <h3></h3>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="" width="1920px" height="500px" alt="Pinguinorey" />
+                        <div class="carousel-caption">
+                            <h3></h3>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="" width="1920px" height="500px" alt="hemul" />
+                        <div class="carousel-caption">
+                            <h3></h3>
+                        </div>
+                    </div>
+
+                    <!-- <section id="quienes-somos">
+                <div>
+                    <h2>QUIENES SOMOS</h2>
+                    <p><img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual es una aerolínea comprometida con brindar una experiencia de vuelo
+                        única y realista. Nuestro objetivo es realizar las operaciones de la aerolínea real cumpliendo con su política operativa.</p>
+                </div>
+            </section>
+            <section id="equipo">
+                <h2>EQUIPO DIRECTIVO</h2>
+                <p>El equipo directivo de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual se compromete a brindar el máximo realismo y apoyo a todos los pilotos de la compañía, ya que, muchos de ellos tienen el máximo conocimiento en la flota A320 y experiencia suficiente en cuanto a la realización de operaciones aéreas llevadas a cabo en la vida real </p>
+            </section>
+            <section id="flota">
+                <h2>FLOTA DE AVIONES </h2>
+                <p>La flota de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual está compuesta por A320 con motores IAE. Nuestros aviones son utilizados para cubrir rutas domésticas e internacionales de corta y mediana distancia. Operamos con una flota relativamente jocen y moderna con una media de edad de 5.4 años, lo que nos permite realizar operaciones eficientes y con relativa comodidad para nuestra tripulación. </p>
+            </section>
+            <section id="seguridad">
+                <h2>COMPROMISO CON LA SEGURIDAD Y LA CALIDAD</h2>
+                <p>En <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual, la seguridad y la calidad son nuestra máxima prioridad. Conoce nuestros
+                    estándares y procedimientos para garantizar una experiencia de vuelo segura y satisfactoria para
+                    la operación.</p>
+            </section>
+        </section> -->
+                    <a class="carousel-control-prev" href="#carouselDestinations" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselDestinations" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
         </section>
         <section id="contact">
             <div>
