añadimos la sección Quiénes Somos con su responsive para celulares y tablets

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="./pages/historia.html">Quiénes Somos</a></li>
-          <li><a href="./pages/rutas.html">Nuestras Rutas</a></li>
+          <li><a href="./pages/rutas.html">Rutas</a></li>
           <li><a href="./pages/flota.html">Flota</a></li>
           <li><a href="./pages/staff.html">Staff</a></li>
           <li><a href="./pages/acceso.html">Acceso Tripulación</a></li>
