--- a/pages/historia.html
+++ b/pages/historia.html
@@ -25,41 +25,56 @@
             <ul class="menu">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./pages/historia.html">Quiénes Somos</a></li>
-                <li><a href="./pages/rutas.html">Nuestras Rutas</a></li>
+                <li><a href="./pages/rutas.html">Rutas</a></li>
                 <li><a href="./pages/flota.html">Flota</a></li>
                 <li><a href="./pages/staff.html">Staff</a></li>
                 <li><a href="./pages/acceso.html">Acceso Tripulación</a></li>
                 <li><a href="./pages/registro.html">Registrarse</a></li>
             </ul>
         </nav>
-        <section id="historia">
-            <div id="carouselhistoria" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/0b59cac1-f53c-4389-b32e-fac73e474b73/desktop-3.png"  alt="lv-ivo" />
-                        <div class="carousel-caption">
-                            <h3><img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual es una aerolínea comprometida con brindar una experiencia de vuelo
-                                única y realista. Nuestro objetivo es realizar las operaciones de la aerolínea real cumpliendo con su política operativa.</h3>
+        <section class="quienes-somos">
+            <div class="container">
+                <h1>DESCUBRE <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual</h1>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <img src="../images/Microsoft Flight Simulator Screenshot 2024.04.01 - 23.25.25.80.png" class="card-img-top" alt="avionjes">
+                            <div class="card-body">
+                                <p class="card-text"><img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual es una aerolínea comprometida con brindar una experiencia de vuelo
+                                    única y realista. Nuestro objetivo es realizar las operaciones de la aerolínea real cumpliendo con su política operativa.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="" width="1920px" height="500px" alt="ZorroCulpeo" />
-                        <div class="carousel-caption">
-                            <h3></h3>
+                    <div class="col-md-6">
+                        <div class="card">
+                            <img src="../images/aaaa.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">El equipo directivo de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual se compromete a brindar el máximo realismo y apoyo a todos los pilotos de la compañía, ya que, muchos de ellos tienen el máximo conocimiento en la flota A320 y experiencia suficiente en cuanto a la realización de operaciones aéreas llevadas a cabo en la vida real</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="" width="1920px" height="500px" alt="Pinguinorey" />
-                        <div class="carousel-caption">
-                            <h3></h3>
+                    <div class="col-md-6">
+                        <div class="card">
+                            <img src="../images/Microsoft Flight Simulator Screenshot 2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">La flota de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual está compuesta por A320 con motores IAE. Nuestros aviones son utilizados para cubrir rutas domésticas e internacionales de corta y mediana distancia. Operamos con una flota relativamente jocen y moderna con una media de edad de 5.4 años, lo que nos permite realizar operaciones eficientes y con relativa comodidad para nuestra tripulación.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="" width="1920px" height="500px" alt="hemul" />
-                        <div class="carousel-caption">
-                            <h3></h3>
+                    <div class="col-md-6">
+                        <div class="card">
+                            <img src="../images/DSCN0292.JPG" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">En <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual, la seguridad y la calidad son nuestra máxima prioridad. Conoce nuestros
+                                    estándares y procedimientos para garantizar una experiencia de vuelo segura y satisfactoria para
+                                    la operación.</p>
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        
 
                     <!-- <section id="quienes-somos">
                 <div>
@@ -83,16 +98,6 @@
                     la operación.</p>
             </section>
         </section> -->
-                    <a class="carousel-control-prev" href="#carouselDestinations" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselDestinations" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-        </section>
         <section id="contact">
             <div>
                 <h2>Contacto</h2>
