--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/937a90ed-5c3e-4e55-b49d-158a0fffe2d7/Salta-2.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/937a90ed-5c3e-4e55-b49d-158a0fffe2d7/Salta-2.jpg" width="1920px" height="500px"
               alt="Salta" />
             <div class="carousel-caption">
               <h3>Descubre Salta</h3>
@@ -61,7 +61,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/8ed584b0-106a-4e27-9348-9128ce30dc95/JUJ-1920x500_img1.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/8ed584b0-106a-4e27-9348-9128ce30dc95/JUJ-1920x500_img1.png" width="1920px" height="500px"
               alt="Jujuy" />
             <div class="carousel-caption">
               <h3>Descubre Jujuy</h3>
@@ -69,7 +69,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/7b5491cb-3595-4a34-bdb3-9ecb30e82167/FTE-1920x500A.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/7b5491cb-3595-4a34-bdb3-9ecb30e82167/FTE-1920x500A.png" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre El Calafate</h3>
@@ -77,7 +77,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/3f8e3c93-d332-4e32-8e27-8a362abbe87a/iguazu-3.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/3f8e3c93-d332-4e32-8e27-8a362abbe87a/iguazu-3.jpg" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Iguazú</h3>
@@ -85,7 +85,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/3bfbe780-0a64-4b32-9347-9c23925edd55/Tucuman-2.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/3bfbe780-0a64-4b32-9347-9c23925edd55/Tucuman-2.jpg" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Tucumán</h3>
@@ -93,7 +93,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/f810fef3-abb9-438d-8d51-45ff0e9747aa/USH-1920X500.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/f810fef3-abb9-438d-8d51-45ff0e9747aa/USH-1920X500.png" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Ushuaia</h3>
@@ -101,7 +101,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/cb807b54-176a-47b4-9d1a-63641b1f3918/mendoza2%20%281%29.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/cb807b54-176a-47b4-9d1a-63641b1f3918/mendoza2%20%281%29.png" 
               width="1920px" height="500px" alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Mendoza</h3>
@@ -109,7 +109,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/d1746d58-0044-45af-a87b-aa02a1781af7/cordoba%20%281%29.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/d1746d58-0044-45af-a87b-aa02a1781af7/cordoba%20%281%29.png" 
               width="1920px" height="500px" alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Córdoba</h3>
@@ -117,7 +117,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/d94b838c-e7b7-4e4a-9178-3a17bcd3459e/CPC-1920x500_1.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/d94b838c-e7b7-4e4a-9178-3a17bcd3459e/CPC-1920x500_1.png" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre San Martín de los Andes</h3>
@@ -125,7 +125,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/9121d225-a713-4962-bf40-d9126164456b/Neuquen-3.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/9121d225-a713-4962-bf40-d9126164456b/Neuquen-3.jpg" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Neuquén</h3>
@@ -133,7 +133,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/e376a0ab-1b2c-4880-b76c-05be50bdffc9/Palomar-1.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/e376a0ab-1b2c-4880-b76c-05be50bdffc9/Palomar-1.jpg" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Buenos Aires</h3>
@@ -148,7 +148,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/cb29612c-82cd-4b77-8df8-b846d073bd91/GIG-1920x500-2.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/cb29612c-82cd-4b77-8df8-b846d073bd91/GIG-1920x500-2.png" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Río de Janeiro</h3>
@@ -156,7 +156,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/2c5825ce-f236-467d-9dce-095f9db7640d/lima1.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/2c5825ce-f236-467d-9dce-095f9db7640d/lima1.jpg" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Lima</h3>
@@ -164,7 +164,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/09680a35-ad3d-4fbb-9c19-fe027563c45a/ASU-1920x500_2.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/09680a35-ad3d-4fbb-9c19-fe027563c45a/ASU-1920x500_2.png" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Asunción</h3>
@@ -172,7 +172,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/e2e12aa3-1b6d-4a02-9081-1593a68a32ff/Santiago1.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/e2e12aa3-1b6d-4a02-9081-1593a68a32ff/Santiago1.jpg" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Santiago</h3>
@@ -180,7 +180,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/9477c870-16a6-4f6a-a91e-d2c93ac333b6/FLN-1920X500%20A.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/9477c870-16a6-4f6a-a91e-d2c93ac333b6/FLN-1920X500%20A.jpg" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Florianópolis</h3>
@@ -188,7 +188,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/5fd2e1ef-7ae1-4e5f-95c9-b223dc506c62/conce.jpg"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/5fd2e1ef-7ae1-4e5f-95c9-b223dc506c62/conce.jpg"width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Concepción</h3>
@@ -196,7 +196,7 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100"
-              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/a317ce24-1457-4b6e-b8e7-a7875ea2f7ee/MVD-1920x500_1.png"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/a317ce24-1457-4b6e-b8e7-a7875ea2f7ee/MVD-1920x500_1.png" width="1920px" height="500px"
               alt="Destino 1" />
             <div class="carousel-caption">
               <h3>Descubre Montevideo</h3>
