--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </section>
     <section id="contact">
       <div>
-        <h2>Contacto</h2>
+        <h2>CONTACTO</h2>
         <h4>
           Ante cualquier consulta, no dude en enviarnos un correo a la siguiente
           dirección de mail
