--- a/pages/historia.html
+++ b/pages/historia.html
@@ -34,14 +34,20 @@
         </nav>
         <section class="quienes-somos">
             <div class="container">
-                <h1>DESCUBRE <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual</h1>
+                <h1>DESCUBRE <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px">
+                    Argentina Virtual</h1>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="card">
-                            <img src="../images/Microsoft Flight Simulator Screenshot 2024.04.01 - 23.25.25.80.png" class="card-img-top" alt="avionjes">
+                            <img src="../images/Microsoft Flight Simulator Screenshot 2024.04.01 - 23.25.25.80.png"
+                                class="card-img-top" alt="avionjes">
                             <div class="card-body">
-                                <p class="card-text"><img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual es una aerolínea comprometida con brindar una experiencia de vuelo
-                                    única y realista. Nuestro objetivo es realizar las operaciones de la aerolínea real cumpliendo con su política operativa.</p>
+                                <p class="card-text"><img
+                                        src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg"
+                                        width="150px"> Argentina Virtual es una aerolínea comprometida con brindar una
+                                    experiencia de vuelo
+                                    única y realista. Nuestro objetivo es realizar las operaciones de la aerolínea real
+                                    cumpliendo con su política operativa.</p>
                             </div>
                         </div>
                     </div>
@@ -49,15 +55,27 @@
                         <div class="card">
                             <img src="../images/aaaa.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <p class="card-text">El equipo directivo de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual se compromete a brindar el máximo realismo y apoyo a todos los pilotos de la compañía, ya que, muchos de ellos tienen el máximo conocimiento en la flota A320 y experiencia suficiente en cuanto a la realización de operaciones aéreas llevadas a cabo en la vida real</p>
+                                <p class="card-text">El equipo directivo de <img
+                                        src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg"
+                                        width="150px"> Argentina Virtual se compromete a brindar el máximo realismo y
+                                    apoyo a todos los pilotos de la compañía, ya que, muchos de ellos tienen el máximo
+                                    conocimiento en la flota A320 y experiencia suficiente en cuanto a la realización de
+                                    operaciones aéreas llevadas a cabo en la vida real</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card">
-                            <img src="../images/Microsoft Flight Simulator Screenshot 2.png" class="card-img-top" alt="...">
+                            <img src="../images/Microsoft Flight Simulator Screenshot 2.png" class="card-img-top"
+                                alt="...">
                             <div class="card-body">
-                                <p class="card-text">La flota de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual está compuesta por A320 con motores IAE. Nuestros aviones son utilizados para cubrir rutas domésticas e internacionales de corta y mediana distancia. Operamos con una flota relativamente jocen y moderna con una media de edad de 5.4 años, lo que nos permite realizar operaciones eficientes y con relativa comodidad para nuestra tripulación.</p>
+                                <p class="card-text">La flota de <img
+                                        src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg"
+                                        width="150px"> Argentina Virtual está compuesta por A320 con motores IAE.
+                                    Nuestros aviones son utilizados para cubrir rutas domésticas e internacionales de
+                                    corta y mediana distancia. Operamos con una flota relativamente jocen y moderna con
+                                    una media de edad de 5.4 años, lo que nos permite realizar operaciones eficientes y
+                                    con relativa comodidad para nuestra tripulación.</p>
                             </div>
                         </div>
                     </div>
@@ -65,8 +83,12 @@
                         <div class="card">
                             <img src="../images/DSCN0292.JPG" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <p class="card-text">En <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual, la seguridad y la calidad son nuestra máxima prioridad. Conoce nuestros
-                                    estándares y procedimientos para garantizar una experiencia de vuelo segura y satisfactoria para
+                                <p class="card-text">En <img
+                                        src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg"
+                                        width="150px"> Argentina Virtual, la seguridad y la calidad son nuestra máxima
+                                    prioridad. Conoce nuestros
+                                    estándares y procedimientos para garantizar una experiencia de vuelo segura y
+                                    satisfactoria para
                                     la operación.</p>
                             </div>
                         </div>
@@ -74,33 +96,9 @@
                 </div>
             </div>
         </section>
-        
-
-                    <!-- <section id="quienes-somos">
-                <div>
-                    <h2>QUIENES SOMOS</h2>
-                    <p><img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual es una aerolínea comprometida con brindar una experiencia de vuelo
-                        única y realista. Nuestro objetivo es realizar las operaciones de la aerolínea real cumpliendo con su política operativa.</p>
-                </div>
-            </section>
-            <section id="equipo">
-                <h2>EQUIPO DIRECTIVO</h2>
-                <p>El equipo directivo de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual se compromete a brindar el máximo realismo y apoyo a todos los pilotos de la compañía, ya que, muchos de ellos tienen el máximo conocimiento en la flota A320 y experiencia suficiente en cuanto a la realización de operaciones aéreas llevadas a cabo en la vida real </p>
-            </section>
-            <section id="flota">
-                <h2>FLOTA DE AVIONES </h2>
-                <p>La flota de <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual está compuesta por A320 con motores IAE. Nuestros aviones son utilizados para cubrir rutas domésticas e internacionales de corta y mediana distancia. Operamos con una flota relativamente jocen y moderna con una media de edad de 5.4 años, lo que nos permite realizar operaciones eficientes y con relativa comodidad para nuestra tripulación. </p>
-            </section>
-            <section id="seguridad">
-                <h2>COMPROMISO CON LA SEGURIDAD Y LA CALIDAD</h2>
-                <p>En <img src="https://jetsmart.com/images/header/jetsmart-logo-colored.svg" width="150px"> Argentina Virtual, la seguridad y la calidad son nuestra máxima prioridad. Conoce nuestros
-                    estándares y procedimientos para garantizar una experiencia de vuelo segura y satisfactoria para
-                    la operación.</p>
-            </section>
-        </section> -->
         <section id="contact">
             <div>
-                <h2>Contacto</h2>
+                <h2>CONTACTO</h2>
                 <h4>
                     Ante cualquier consulta, no dude en enviarnos un correo a la siguiente
                     dirección de mail
