finalizamos la seccion de rutas con su responsive para celulares y tablets

--- a/index.html
+++ b/index.html
@@ -202,6 +202,22 @@
               <h3>Descubre Montevideo</h3>
             </div>
           </div>
+          <div class="carousel-item">
+            <img class="d-block w-100"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/48abc396-4c12-477a-aaa1-40e754a39ba0/Curitiba-1920x500_2.png" width="1920px" height="500px"
+              alt="Destino 1" />
+            <div class="carousel-caption">
+              <h3>Descubre Curitiba</h3>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100"
+              src="https://assets-us-01.kc-usercontent.com/b2956330-c34f-0064-2c6f-27bd5c0147fc/0fd4caa0-6e45-45f1-9ad5-b5c6d0f9b97e/Porto-1920x500_2.png" width="1920px" height="500px"
+              alt="Destino 1" />
+            <div class="carousel-caption">
+              <h3>Descubre Porto Alegre</h3>
+            </div>
+          </div>
         </div>
         <a class="carousel-control-prev" href="#carouselDestinations" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
