--- a/pages/historia.html
+++ b/pages/historia.html
@@ -24,12 +24,12 @@
             </div>
             <ul class="menu">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./pages/historia.html">Quiénes Somos</a></li>
-                <li><a href="./pages/rutas.html">Rutas</a></li>
-                <li><a href="./pages/flota.html">Flota</a></li>
-                <li><a href="./pages/staff.html">Staff</a></li>
-                <li><a href="./pages/acceso.html">Acceso Tripulación</a></li>
-                <li><a href="./pages/registro.html">Registrarse</a></li>
+                <li><a href="../pages/historia.html">Quiénes Somos</a></li>
+                <li><a href="../pages/rutas.html">Rutas</a></li>
+                <li><a href="../pages/flota.html">Flota</a></li>
+                <li><a href="../pages/staff.html">Staff</a></li>
+                <li><a href="../pages/acceso.html">Acceso Tripulación</a></li>
+                <li><a href="../pages/registro.html">Registrarse</a></li>
             </ul>
         </nav>
         <section class="quienes-somos">
